--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet">
+    
+  <title>PixelLab - Soluções Digitais</title>
+  <meta name="title" content="PixelLab - Soluções Digitais">
+  <meta name="description" content="Desenvolvemos fórmulas únicas para o sucesso do seu negócio no meio digital" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
     body {
       margin: 0 !important;
       padding: 0 !important;
     }
   </style>
-  <title>PixelLab - Soluções Digitais</title>
 </head>
 
 <body>
