--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q3JEDL9GEK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-Q3JEDL9GEK');
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
@@ -8,9 +17,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-    
-  <title>PixelLab - Soluções Digitais</title>
-  <meta name="title" content="PixelLab - Soluções Digitais">
+
+  <title>Spítha - Soluções Digitais</title>
+  <meta name="title" content="Spítha - Soluções Digitais">
   <meta name="description" content="Desenvolvemos fórmulas únicas para o sucesso do seu negócio no meio digital" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
